# NimBLE-HCI-UART-Host-ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini
examples/: NimBLE-Arduino.cpp  advertise.c
include/nimble/ext/tinycrypt/: include
include/nimble/nimble/: include
include/nimble/nimble/host/: include
include/nimble/nimble/host/services/ans/: include
include/nimble/nimble/host/services/bas/: include
include/nimble/nimble/host/services/bleuart/: include
include/nimble/nimble/host/services/dis/: include
include/nimble/nimble/host/services/gap/: include
include/nimble/nimble/host/services/gatt/: include
include/nimble/nimble/host/services/ias/: include
include/nimble/nimble/host/services/lls/: include
include/nimble/nimble/host/services/tps/: include
include/nimble/nimble/host/store/ram/: include
include/nimble/nimble/host/util/: include
include/nimble/nimble/transport/: include
include/nimble/nimble/transport/common/hci_h4/: include
include/nimble/nimble/transport/include/: transport.h  transport_impl.h
include/nimble/nimble/transport/uart/include/: transport
include/nimble/nimble/transport/uart/include/bsp/: bsp.h
include/nimble/nimble/transport/uart/include/hal/: hal_gpio.h  hal_uart.h
include/nimble/nimble/transport/uart_ll/include/hal/: hal_uart.h
include/nimble/porting/nimble/: include
include/nimble/porting/npl/freertos/: include
include/nimble/porting/npl/freertos/include/nimble/: nimble_npl_os.h  nimble_port_freertos.h  npl_freertos.h
src/: CMakeLists.txt  main.c  main.cpp  nimble-arduino.cpp  nimble_advertise.c
src/nimble/ext/tinycrypt/: src
src/nimble/nimble/host/: src
src/nimble/nimble/host/services/ans/: src
src/nimble/nimble/host/services/bas/: src
src/nimble/nimble/host/services/dis/: src
src/nimble/nimble/host/services/gap/: src
src/nimble/nimble/host/services/gatt/: src
src/nimble/nimble/host/services/ias/: src
src/nimble/nimble/host/services/lls/: src
src/nimble/nimble/host/services/tps/: src
src/nimble/nimble/host/store/ram/: src
src/nimble/nimble/host/util/: src
src/nimble/nimble/transport/common/hci_h4/: src
src/nimble/nimble/transport/src/: transport.c
src/nimble/nimble/transport/uart/src/: ble_hci_uart.c
src/nimble/nimble/transport/uart/src/hal/: hal_uart.c
src/nimble/nimble/transport/uart_ll/src/: hci_uart.c
src/nimble/nimble/transport/uart_ll/src/hal/: hal_uart.c
src/nimble/porting/nimble/: src
src/nimble/porting/npl/freertos/: src
src/nimble/porting/npl/freertos/src/: nimble_port_freertos.c
